--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "engines": {
         "vscode": "^1.26.0"
     },
+    "repository": {
+        "url": "https://github.com/fvclaus/vsc-sort-json-array"
+    },
     "categories": [
         "Other"
     ],
