--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
-        "test": "npm run compile && node ./node_modules/vscode/bin/test"
+        "test": "npm run compile && node ./out/test/runTest.js"
     },
     "devDependencies": {
         "@types/glob": "^7.1.1",
