--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on: [push]
 jobs:
   build:
     name: Greeting
-    runs-on: elastest/ci-docker-e2e
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v1
         with:
