--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "Other"
     ],
     "activationEvents": [
-        "onCommand:extension.sortJsonArray"
+        "onCommand:extension.sortJsonArray",
+        "onCommand:extension.sortJsonArrayDescending",
+        "onCommand:extension.sortJsonArrayCustom"
     ],
     "main": "./out/extension",
     "contributes": {
@@ -23,6 +25,14 @@
             {
                 "command": "extension.sortJsonArray",
                 "title": "Sort JSON array"
+            },
+            {
+                "command": "extension.sortJsonArrayDescending",
+                "title": "Sort JSON array descending"
+            },
+            {
+                "command": "extension.sortJsonArrayCustom",
+                "title": "Sort JSON array custom"
             }
         ]
     },
@@ -37,10 +47,12 @@
         "@types/glob": "^7.1.1",
         "@types/mocha": "^5.2.6",
         "@types/node": "^12.7.8",
+        "@types/temp": "^0.8.34",
         "@types/vscode": "^1.26.0",
         "chai": "^4.2.0",
         "glob": "^7.1.4",
         "mocha": "^6.1.4",
+        "temp": "^0.9.0",
         "tslint": "^5.20.0",
         "typescript": "^3.6.1",
         "vscode-test": "^1.2.0"
