--- a/package.json
+++ b/package.json
@@ -46,12 +46,16 @@
         "@types/chai": "^4.2.3",
         "@types/glob": "^7.1.1",
         "@types/mocha": "^5.2.6",
+        "@types/mv": "^2.1.0",
         "@types/node": "^12.7.8",
+        "@types/rimraf": "^2.0.2",
         "@types/temp": "^0.8.34",
         "@types/vscode": "^1.26.0",
         "chai": "^4.2.0",
         "glob": "^7.1.4",
         "mocha": "^6.1.4",
+        "mv": "^2.1.1",
+        "rimraf": "^3.0.0",
         "temp": "^0.9.0",
         "tslint": "^5.20.0",
         "typescript": "^3.6.1",
