--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "version": "0.0.2",
     "publisher": "fvclaus",
     "engines": {
-        "vscode": "^1.26.0",
+        "vscode": "^1.31.0",
         "nvm": "v12.10.0"
     },
     "repository": {
@@ -50,7 +50,7 @@
         "@types/node": "^12.7.8",
         "@types/rimraf": "^2.0.2",
         "@types/temp": "^0.8.34",
-        "@types/vscode": "^1.26.0",
+        "@types/vscode": "1.31.0",
         "chai": "^4.2.0",
         "glob": "^7.1.4",
         "mocha": "^6.1.4",
