--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "sort-json-array",
     "displayName": "Sort JSON array",
     "description": "Sorts any type of json array by value, object property or custom function",
-    "version": "1.0.8",
+    "version": "1.0.11",
     "publisher": "fvclaus",
     "engines": {
         "vscode": "^1.31.0",
@@ -17,6 +17,13 @@
         "type": "git",
         "url": "https://github.com/fvclaus/vsc-sort-json-array.git"
     },
+    "badges": [
+        {
+            "uri": "https://github.com/fvclaus/vsc-sort-json-array/workflows/tests/badge.svg",
+            "href": "https://github.com/fvclaus/vsc-sort-json-array/actions?workflow=tests",
+            "description": "Tests"
+        }
+    ],
     "icon": "icon.png",
     "galleryBanner": {
         "color": "#C80000",
