--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "sort-json-array",
     "displayName": "Sort JSON array",
     "description": "Sorts any type of json array by value, object property or custom function",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "publisher": "fvclaus",
     "engines": {
         "vscode": "^1.31.0"
@@ -59,6 +59,12 @@
         "watch": "tsc -watch -p ./",
         "test": "npm run compile && node ./out/test/runTest.js"
     },
+    "dependencies": {
+        "typescript": "^3.6.1",
+        "glob": "^7.1.4",
+        "mv": "^2.1.1",
+        "temp": "^0.9.0"
+    },
     "devDependencies": {
         "@types/chai": "^4.2.3",
         "@types/glob": "^7.1.1",
@@ -69,13 +75,9 @@
         "@types/temp": "^0.8.34",
         "@types/vscode": "1.31.0",
         "chai": "^4.2.0",
-        "glob": "^7.1.4",
         "mocha": "^6.1.4",
-        "mv": "^2.1.1",
         "rimraf": "^3.0.0",
-        "temp": "^0.9.0",
         "tslint": "^5.20.0",
-        "typescript": "^3.6.1",
         "vscode-test": "^1.2.0"
     }
 }
