--- a/package.json
+++ b/package.json
@@ -60,10 +60,12 @@
         "test": "npm run compile && node ./out/test/runTest.js"
     },
     "dependencies": {
-        "typescript": "^3.6.1",
+        "acorn": "^7.1.0",
+        "acorn-walk": "^7.0.0",
         "glob": "^7.1.4",
         "mv": "^2.1.1",
-        "temp": "^0.9.0"
+        "temp": "^0.9.0",
+        "typescript": "^3.6.1"
     },
     "devDependencies": {
         "@types/chai": "^4.2.3",
