--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
-        "compile": "tsc -p ./",
-        "watch": "tsc -watch -p ./",
+        "compile": "rimraf out/; tsc -p ./",
+        "watch": "rimraf out/; tsc -watch -p ./",
         "test": "npm run compile && node ./out/test/runTest.js"
     },
     "dependencies": {
@@ -77,7 +77,7 @@
         "@types/vscode": "1.31.0",
         "chai": "^4.2.0",
         "mocha": "^6.1.4",
-        "rimraf": "^3.0.0",
+        "rimraf": "^3.0.2",
         "tslint": "^5.20.0",
         "vscode-test": "^1.2.0"
     }
