--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
 name: tests
 on: [push, pull_request]
 
+
 jobs:
   build:
     name: tests
@@ -15,3 +16,8 @@ jobs:
           node-version: '12.10'
       - run: npm install
       - run: npm run test
+        env:
+          VSCODE_VERSION: "1.38.0"
+      - run: npm run test
+        env:
+          VSCODE_VERSION: "1.42.0"
