--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "sort-json-array",
     "displayName": "Sort JSON array",
     "description": "Sorts any type of json array by value, object property or custom function",
-    "version": "1.1.1",
+    "version": "2.0.0",
     "publisher": "fvclaus",
     "engines": {
         "vscode": "^1.31.0"
@@ -18,7 +18,7 @@
     },
     "badges": [
         {
-            "uri": "https://github.com/fvclaus/vsc-sort-json-array/workflows/tests/badge.svg",
+            "url": "https://github.com/fvclaus/vsc-sort-json-array/workflows/tests/badge.svg",
             "href": "https://github.com/fvclaus/vsc-sort-json-array/actions?workflow=tests",
             "description": "Tests"
         }
