--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "publisher": "fvclaus",
     "license": "BSD-3-Clause",
     "engines": {
-        "vscode": "^1.44.0"
+        "vscode": "^1.38.0"
     },
     "bugs": {
         "url": "https://github.com/fvclaus/vsc-sort-json-array/issues",
@@ -50,7 +50,7 @@
     "scripts": {
         "vscode:prepublish": "npm run compile",
         "compile": "node bin/compile.js",
-        "watch": "node bin/compile.js --watch",
+        "watch": "tsc --watch",
         "test": "npm run compile && node ./out/test/runTest.js"
     },
     "dependencies": {
@@ -66,11 +66,13 @@
         "@types/mv": "^2.1.0",
         "@types/node": "^12.7.8",
         "@types/rimraf": "^2.0.2",
+        "@types/sinon": "^9.0.0",
         "@types/temp": "^0.8.34",
         "@types/vscode": "1.31.0",
         "chai": "^4.2.0",
         "mocha": "^6.1.4",
         "rimraf": "^3.0.2",
+        "sinon": "^9.0.2",
         "tslint": "^5.20.0",
         "vscode-test": "^1.3.0"
     }
