--- a/package.json
+++ b/package.json
@@ -49,9 +49,10 @@
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
-        "compile": "node bin/compile.js",
-        "watch": "tsc --watch",
-        "test": "npm run compile && node ./out/test/runTest.js"
+        "compile": "rimraf out/ && tsc --listEmittedFiles -p ./ --outDir out/",
+        "watch": "rimraf out/ && tsc --watch --outDir out/",
+        "test": "npm run compile && node ./out/test/runTest.js",
+        "lint": "eslint \"src/**/*.ts\""
     },
     "dependencies": {
         "typescript": "^3.6.1",
@@ -69,7 +70,12 @@
         "@types/sinon": "^9.0.0",
         "@types/temp": "^0.8.34",
         "@types/vscode": "1.31.0",
+        "@typescript-eslint/eslint-plugin": "^3.4.0",
+        "@typescript-eslint/parser": "^3.4.0",
         "chai": "^4.2.0",
+        "eslint": "^7.3.1",
+        "eslint-config-google": "^0.14.0",
+        "eslint-plugin-mocha": "^7.0.1",
         "mocha": "^6.1.4",
         "rimraf": "^3.0.2",
         "sinon": "^9.0.2",
