--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,3 +18,9 @@ jobs:
       - run: npm run test
         env:
           VSCODE_VERSION: "1.44.0"
+      - run: npm run test
+        env:
+          VSCODE_VERSION: "1.45.0"
+      - run: npm run test
+        env:
+          VSCODE_VERSION: "1.46.0"
