--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
         "antlr4:benchmark": "npm run compile && node out/test/suite/parser/runParserBenchmark.js"
     },
     "dependencies": {
-        "antlr4ts": "^0.5.0-alpha.3",
         "glob": "^7.1.4",
         "mv": "^2.1.1",
         "temp": "^0.9.0",
@@ -72,11 +71,11 @@
         "@types/node": "^12.7.8",
         "@types/rimraf": "^2.0.2",
         "@types/sinon": "^9.0.0",
+        "@types/source-map-support": "^0.5.1",
         "@types/temp": "^0.8.34",
         "@types/vscode": "1.31.0",
         "@typescript-eslint/eslint-plugin": "^3.4.0",
         "@typescript-eslint/parser": "^3.4.0",
-        "antlr4ts-cli": "^0.5.0-alpha.3",
         "benchmark": "^2.1.4",
         "chai": "^4.2.0",
         "eslint": "^7.3.1",
@@ -85,6 +84,7 @@
         "mocha": "^6.1.4",
         "rimraf": "^3.0.2",
         "sinon": "^9.0.2",
+        "source-map-support": "^0.5.19",
         "tslint": "^5.20.0",
         "vscode-test": "^1.3.0"
     }
