--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,12 @@ jobs:
       - run: npm install
       - run: npm run lint
       - run: npm run test
+      - run: npm run vsc-test
         env:
           VSCODE_VERSION: "1.44.0"
-      - run: npm run test
+      - run: npm run vsc-test
         env:
           VSCODE_VERSION: "1.45.0"
-      - run: npm run test
+      - run: npm run vsc-test
         env:
           VSCODE_VERSION: "1.46.0"
