--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,26 +19,11 @@
             "preLaunchTask": "npm-watch"
         },
         {
-            "name": "Extension Tests (all)",
-            "type": "extensionHost",
-            "request": "launch",
-            "runtimeExecutable": "${execPath}",
-            "args": [
-                "--extensionDevelopmentPath=${workspaceFolder}",
-                "--extensionTestsPath=${workspaceFolder}/out/test/suite"
-            ],
-            "outFiles": [
-                "${workspaceFolder}/out/test/**/*.js"
-            ],
-            "preLaunchTask": "npm-watch"
-        },
-        {
-            "name": "Extension Tests (current file)",
+            "name": "Extension Tests (vsc)",
             "type": "extensionHost",
             "request": "launch",
             "runtimeExecutable": "${execPath}",
             "env": {
-                "MOCHA_TEST_PATTERN": "${file}",
                 "MOCHA_TIMEOUT": "0"
             },
             "args": [
@@ -52,16 +37,24 @@
         },
         {
             "type": "node",
+            "name": "Extension Tests (node)",
             "request": "launch",
-            "name": "Parser Benchmark",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "preLaunchTask": "npm: compile",
-            "program": "${workspaceFolder}/out/test/suite/parser/runParserBenchmark.js",
-            "outFiles": [
-                "${workspaceFolder}/out/**/*.js"
+            "preLaunchTask": "npm-compile",
+            "program": "${workspaceFolder}/node_modules/.bin/mocha",
+            "args": [
+                "--ui",
+                "tdd",
+                "--timeout",
+                "9999999",
+                "--recursive",
+                "out/**/*.test.js"
             ],
-        }
+            "outFiles": [
+                "${workspaceFolder}/out/test/**/*.js"
+            ],
+        },
     ]
 }
