--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,16 @@
             "presentation": {
                 "reveal": "never"
             },
+        },
+        {
+            "type": "npm",
+            "script": "compile",
+            "label": "npm-compile",
+            "problemMatcher": "$tsc",
+            "isBackground": false,
+            "presentation": {
+                "reveal": "always"
+            },
             "group": {
                 "kind": "build",
                 "isDefault": true
