--- a/package.json
+++ b/package.json
@@ -51,20 +51,20 @@
         "vscode:prepublish": "npm run compile",
         "compile": "rimraf out/ && tsc --listEmittedFiles -p ./ --outDir out/",
         "watch": "rimraf out/ && tsc --watch --outDir out/",
-        "test": "npm run compile && node ./out/test/runTest.js",
+        "vsc-test": "npm run compile && node ./out/test/runTest.js",
+        "test": "npm run compile && mocha --recursive --ui tdd --timeout 5000 'out/**/*.test.js'",
         "lint": "eslint \"src/**/*.ts\"",
-        "antlr4:generate": "rimraf src/parser/generated && antlr4ts -Dlanguage=JavaScript -no-listener -visitor -Xexact-output-dir -o src/parser/generated src/parser/JSON.g4",
-        "antlr4:benchmark": "npm run compile && node out/test/suite/parser/runParserBenchmark.js"
+        "antlr4:generate": "rimraf src/parser/generated && antlr4ts -Dlanguage=JavaScript -no-listener -visitor -Xexact-output-dir -o src/parser/generated src/parser/JSON.g4"
     },
     "dependencies": {
-        "antlr4ts": "^0.5.0-alpha.3",
+        "antlr4ts": "^0.5.0-alpha.4",
         "glob": "^7.1.4",
         "mv": "^2.1.1",
         "temp": "^0.9.0",
         "typescript": "^3.6.1"
     },
     "devDependencies": {
-        "@types/benchmark": "^1.0.33",
+        "@types/benchmark": "^2.1.0",
         "@types/chai": "^4.2.3",
         "@types/glob": "^7.1.1",
         "@types/mocha": "^5.2.6",
@@ -72,11 +72,12 @@
         "@types/node": "^12.7.8",
         "@types/rimraf": "^2.0.2",
         "@types/sinon": "^9.0.0",
+        "@types/source-map-support": "^0.5.1",
         "@types/temp": "^0.8.34",
         "@types/vscode": "1.31.0",
         "@typescript-eslint/eslint-plugin": "^3.4.0",
         "@typescript-eslint/parser": "^3.4.0",
-        "antlr4ts-cli": "^0.5.0-alpha.3",
+        "antlr4ts-cli": "^0.5.0-alpha.4",
         "benchmark": "^2.1.4",
         "chai": "^4.2.0",
         "eslint": "^7.3.1",
@@ -85,6 +86,7 @@
         "mocha": "^6.1.4",
         "rimraf": "^3.0.2",
         "sinon": "^9.0.2",
+        "source-map-support": "^0.5.19",
         "tslint": "^5.20.0",
         "vscode-test": "^1.3.0"
     }
