Fixes broken ts compilation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,13 +21,14 @@ jobs:
           node-version: '12.10'
       - run: npm install
       - run: npm run lint
-      - run: npm run test
-      - run: npm run vsc-test
+      - run: npm run test:unit
+      - run: npm run test:benchmark
+      - run: npm run test:vsc
         env:
           VSCODE_VERSION: "1.44.0"
-      - run: npm run vsc-test
+      - run: npm run test:vsc
         env:
           VSCODE_VERSION: "1.45.0"
-      - run: npm run vsc-test
+      - run: npm run test:vsc
         env:
           VSCODE_VERSION: "1.46.0"
