--- a/package.json
+++ b/package.json
@@ -51,8 +51,9 @@
         "vscode:prepublish": "npm run compile",
         "compile": "rimraf out/ && tsc --listEmittedFiles -p ./ --outDir out/",
         "watch": "rimraf out/ && tsc --watch --outDir out/",
-        "vsc-test": "npm run compile && node ./out/test/runTest.js",
-        "test": "npm run compile && mocha --recursive --ui tdd --timeout 5000 'out/**/*.test.js'",
+        "test:vsc": "npm run compile && node ./out/test/runTest.js",
+        "test:unit": "npm run compile && mocha --recursive --ui tdd --timeout 5000 'out/**/*.test.js'",
+        "test:benchmark": "npm run compile && mocha --recursive --ui tdd --timeout 5000 'out/**/*.benchmark-test.js'",
         "lint": "eslint \"src/**/*.ts\"",
         "antlr4:generate": "rimraf src/parser/generated && antlr4ts -Dlanguage=JavaScript -no-listener -visitor -Xexact-output-dir -o src/parser/generated src/parser/JSON.g4"
     },
@@ -72,7 +73,6 @@
         "@types/node": "^12.7.8",
         "@types/rimraf": "^2.0.2",
         "@types/sinon": "^9.0.0",
-        "@types/source-map-support": "^0.5.1",
         "@types/temp": "^0.8.34",
         "@types/vscode": "1.31.0",
         "@typescript-eslint/eslint-plugin": "^3.4.0",
