--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,13 +31,13 @@
                 "--extensionTestsPath=${workspaceFolder}/out/test/suite"
             ],
             "outFiles": [
-                "${workspaceFolder}/out/test/**/*.js"
+                "${workspaceFolder}/out/**/*.js"
             ],
             "preLaunchTask": "npm-watch"
         },
         {
             "type": "node",
-            "name": "Extension Tests (node)",
+            "name": "Extension Tests (unit)",
             "request": "launch",
             "skipFiles": [
                 "<node_internals>/**"
@@ -53,7 +53,7 @@
                 "out/**/*.test.js"
             ],
             "outFiles": [
-                "${workspaceFolder}/out/test/**/*.js"
+                "${workspaceFolder}/out/**/*.js"
             ],
         },
     ]
