--- a/package.json
+++ b/package.json
@@ -89,5 +89,6 @@
         "source-map-support": "^0.5.19",
         "tslint": "^5.20.0",
         "vscode-test": "^1.3.0"
-    }
+    },
+    "contributors": ["Philipp Kursawe <phil.kursawe@gmail.com>"]
 }
