--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,11 +24,13 @@
             "request": "launch",
             "runtimeExecutable": "${execPath}",
             "env": {
-                "MOCHA_TIMEOUT": "0"
+                "MOCHA_TIMEOUT": "0",
+                "VSCODE_VERSION": "1.63.0"
             },
             "args": [
+                "${workspaceFolder}/src/test/workspace",
                 "--extensionDevelopmentPath=${workspaceFolder}",
-                "--extensionTestsPath=${workspaceFolder}/out/test/suite"
+                "--extensionTestsPath=${workspaceFolder}/out/test/suite",
             ],
             "outFiles": [
                 "${workspaceFolder}/out/**/*.js"
