Run tests on linux as well

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
       - run: npm install
       - env:
           VSCODE_VERSION: "1.44.0"
-        -run: |
+        run: |
           sudo apt-get install xvfb
           export DISPLAY=':99.0'
           Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
