Run tests on linux as well

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,8 @@ jobs:
       - env:
           VSCODE_VERSION: "1.44.0"
         run: |
+          export DISPLAY=':99.0'
+          Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
           npm run test:vsc
       - env:
           VSCODE_VERSION: "1.96.2"
