Support JS identifiers as object keys

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,15 @@
 	"version": "0.2.0",
     "configurations": [
         {
+          "name": "Debug ANTLR4 grammar",
+          "type": "antlr-debug",
+          "request": "launch",
+          "input": "input.txt",
+          "grammar": "src/parser/JSON.g4",
+          "printParseTree": true,
+          "visualParseTree": true
+        },
+        {
             "name": "Extension",
             "type": "extensionHost",
             "request": "launch",
