--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "rimraf": "^3.0.2",
     "sinon": "^12.0.1",
     "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.2",
     "tslint": "^5.20.1"
   },
   "contributors": [
