--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,6 @@
     // "mochaExplorer.files": "out/test/suite/parser/**/*.js",
     // "mochaExplorer.require": "source-map-support/register",
     // "mochaExplorer.watch": "out/test/suite/parser/**/*.js"
-    "mochaExplorer.files": "src/test/**/parseJson.test.ts",
+    "mochaExplorer.files": "src/test/**/parseArray.test.ts",
     "mochaExplorer.require": "ts-node/register"
 }
