--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,8 @@
     // "mochaExplorer.require": "source-map-support/register",
     // "mochaExplorer.watch": "out/test/suite/parser/**/*.js",
     "mochaExplorer.files": "src/test/**/{parseArray,findRange,undent}.test.ts",
-    "mochaExplorer.require": "ts-node/register"
+    "mochaExplorer.require": "ts-node/register",
+    "cSpell.words": [
+      "undent"
+    ]
 }
