--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,9 +19,12 @@
     // "mochaExplorer.files": "out/test/suite/parser/**/*.js",
     // "mochaExplorer.require": "source-map-support/register",
     // "mochaExplorer.watch": "out/test/suite/parser/**/*.js",
-    "mochaExplorer.files": "src/test/**/{parseArray,findRange,undent}.test.ts",
+    "mochaExplorer.files": "src/test/**/{parseArray,findRange,undent,processAndParseArray,serializeArray}.test.ts",
     "mochaExplorer.require": "ts-node/register",
     "cSpell.words": [
+      "antlr",
+      "CURLIES",
+      "STRINGCHARS",
       "undent"
     ]
 }
